refactor: Replace `Arrays.asList` with `List.of` in tests
Use this link to re-run the recipe: https://app.moderne.io/builder/j1pfpwnjZ?organizationId=ODQ2MGExMTUtNDg0My00N2EwLTgzMGMtNGE1NGExMTBmZDkw

Co-authored-by: Moderne <team@moderne.io>